--- a/WebContent/css/shop-homepage.css
+++ b/WebContent/css/shop-homepage.css
@@ -55,21 +55,20 @@ footer {
 
 #searchbox
 {
-          
-    width: 500px;
+  	display:inline-block;
+    width: 300px;
     height: 35px;
     padding: 10px 10px 10px 20px;
-   
     overflow: hidden; /* Clear floats */
 }
 
 #authenticate
 
 {
+	display: inline;
     color: white;
     width: 500px;
     height: 35px;
     padding: 10px 10px 10px 20px;
-   
     overflow: hidden; /* Clear floats */
 }
