--- a/WebContent/templates/common_template.xhtml
+++ b/WebContent/templates/common_template.xhtml
@@ -9,118 +9,123 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:s="http://jboss.com/products/seam/taglib"
 	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
-	
-  <head>
-    <meta content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>
-     <ui:insert name="pageTitle">Default Title</ui:insert>
-    </title>
-    <!--  Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <!--  Custom CSS -->
-    <link href="css/shop-homepage.css" rel="stylesheet" />
-    <link href="css/registrate.css" rel="stylesheet" />
 
-      <link href="css/stylesheets/styles.css" rel="stylesheet"/>
-    <!--  HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
+<head>
+<meta content="" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="" />
+<meta name="author" content="" />
+<title><ui:insert name="pageTitle">Default Title</ui:insert></title>
+<!--  Bootstrap Core CSS -->
+<link href="css/bootstrap.min.css" rel="stylesheet" />
+<!--  Custom CSS -->
+<link href="css/shop-homepage.css" rel="stylesheet" />
+<link href="css/registrate.css" rel="stylesheet" />
+
+<link href="css/stylesheets/styles.css" rel="stylesheet" />
+<!--  HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
       queries -->
-    <!--  WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--  [if lt IE 9]> <script
+<!--  WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--  [if lt IE 9]> <script
       src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script
       src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
       <![endif] -->
-  </head>
-  <h:body>
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <!--  Navigation -->
-    <div class="container">
-      <!--  Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle"> <span class="sr-only">Toggle
-        navigation</span> <span class="icon-bar"></span> <span
-        class="icon-bar"></span> <span class="icon-bar"></span>
-        </button> <a class="navbar-brand" href="#">Start Bootstrap</a>
-      </div>
-      <!--  Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Services</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-       
-      
-       <h:form id="searchbox">
-	    <h:inputText id="search" type="text" pt:placeholder="Type here" value="${productController.searchedName}"/>
-	    </h:form>
-	    
-	   <h:form id="authenticate" action="">
-	   <h:outputText value="${securityBean.userName}"  rendered="${not empty securityBean.userName}" />
-	   <h:commandLink action="#{securityBean.logout()}" value="Logout" immediate="true"  rendered="${not empty securityBean.userName}" />  
-	   <h:commandButton value="My Basket"
-                     action="basket.xhtml?faces-redirect=true"
-                      rendered="${not empty securityBean.userName}">
-       		<f:setPropertyActionListener target="#{basketController.clientName}" value="#{securityBean.userName}"/>
-       </h:commandButton>
-	  </h:form>
-	   
-      </div>
-      
-      <!--  /.navbar-collapse -->
-    </div>
-    </nav>
-    <!--  /.container -->
-    <!--  Page Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <p class="lead">
-            Shop Name
-          </p>
-          <div class="list-group">
-           <ui:repeat value="#{categoryController.outCategories}" var="category">
-           
-           <h:form class="list-group-item">
-              <h:commandLink action="Man_fashion.xhtml?faces-redirect=true" 
-              		value="#{category.categoryName}" style="color:black;">
-               </h:commandLink>       
-            </h:form>
-           
-           </ui:repeat>
-          </div>
-        </div>
-        
-        <ui:insert name="page_content">Default Content</ui:insert>
-        
-      </div>
-    </div>
-    <!--  /.container -->
-    <div class="container">
-      <hr />
-      <!--  Footer -->
-      <div class="row">
-        <div class="col-lg-12">
-          <p>
-            Copyright &copy; Your Website 2014
-          </p>
-        </div>
-      </div>
-    </div>
-    <!--  /.container -->
-    <!--  jQuery --><script src="js/jquery.js" type="text/javascript"
-    xml:space="preserve"></script>
-     <!--  Bootstrap Core JavaScript --> <script src="js/bootstrap.min.js"
-    type="text/javascript" xml:space="preserve"></script>
-  </h:body>
+</head>
+<h:body>
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<!--  Navigation -->
+	<div class="container">
+		<!--  Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle">
+				<span class="sr-only">Toggle navigation</span> <span
+					class="icon-bar"></span> <span> class="icon-bar"></span> <span
+					class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="index.xhtml">Webshop</a>
+		</div>
+		<!--  Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse"
+			id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<h:panelGroup rendered="#{empty securityBean.userName}">
+					<li><a href="login.xhtml">Log in</a></li>
+					<li><a href="registrate.xhtml">Registrate</a></li>
+				</h:panelGroup>
+				<h:panelGroup rendered="#{not empty securityBean.userName}">
+					<li><a href="#">Contact</a></li>
+				</h:panelGroup>
+			</ul>
+
+
+			<h:form id="searchbox" class="text-right">
+				<h:inputText id="search" type="text" pt:placeholder="Type here"
+					value="${productController.searchedName}" />
+			</h:form>
+
+			<h:form id="authenticate" action="" class="pull-right">
+				<h:outputText value="${securityBean.userName}"
+					rendered="${not empty securityBean.userName}" />
+				<h:commandLink action="#{securityBean.logout()}" value="Logout"
+					immediate="true" rendered="${not empty securityBean.userName}" />
+				<h:commandButton value="My Basket"
+					action="basket.xhtml?faces-redirect=true"
+					rendered="${not empty securityBean.userName}">
+					<f:setPropertyActionListener
+						target="#{basketController.clientName}"
+						value="#{securityBean.userName}" />
+					<f:setPropertyActionListener target="#{orderController.clientName}"
+						value="#{securityBean.userName}" />
+				</h:commandButton>
+			</h:form>
+
+		</div>
+
+		<!--  /.navbar-collapse -->
+	</div>
+	</nav>
+	<!--  /.container -->
+	<!--  Page Content -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<p class="lead">Shop Name</p>
+				<div class="list-group">
+					<ui:repeat value="#{categoryController.outCategories}"
+						var="category">
+
+						<h:form class="list-group-item">
+							<h:commandLink action="#{categoryController.navigateTo(category.categoryName)}"
+								value="#{category.categoryName}" style="color:black;">
+							</h:commandLink>
+						</h:form>
+
+					</ui:repeat>
+				</div>
+			</div>
+
+			<ui:insert name="page_content">Default Content</ui:insert>
+
+		</div>
+	</div>
+	<!--  /.container -->
+	<div class="container">
+		<hr />
+		<!--  Footer -->
+		<div class="row">
+			<div class="col-lg-12">
+				<p>Copyright &copy; Your Website 2014</p>
+			</div>
+		</div>
+	</div>
+	<!--  /.container -->
+	<!--  jQuery -->
+	<script src="js/jquery.js" type="text/javascript" xml:space="preserve"></script>
+	<!--  Bootstrap Core JavaScript -->
+	<script src="js/bootstrap.min.js" type="text/javascript"
+		xml:space="preserve"></script>
+</h:body>
 </html>
